# HTTP_WEB_C

./: .gitignore  ADS1015.cpp  ADS1015.hpp  BME280.cpp  BME280.hpp  CMakeLists.txt  CMakeLists_BACKUP_3916.txt  CMakeLists_LOCAL_3916.txt  CTestTestfile.cmake  FileTypeDetector.cpp  FileTypeDetector.hpp  HTTP_WEB_C.code-workspace  LTR559.cpp  LTR559.cpp.orig  LTR559.hpp  MICS6814.cpp  MICS6814.hpp  Makefile  README.md  ST7735-overlay.dtb  ST7735-overlay.dtbo  ST7735-overlay.dtc  ST7735-overlay.dts  ST7735.cpp  ST7735.hpp  api-rest.cpp  ciphers_test.sh  cmake_install.cmake  dry_run.dtbo  framebuffer-test.cpp  generateHeaders.cpp  generateHeaders.hpp  http_webserver.cpp  job.cpp  job.hpp  main.cpp  main_testing.cpp  parseString.cpp  parseString.hpp  redisQueue.cpp  (+11 more)
.github/workflows/: cmake-armv6-platform.yml  cmake-single-platform.yml  sync_http.yml
benchmarks/: benchmark1_c_https.txt  benchmark2_node.txt
tests/: FileTypeDetectorTest.cc  parseUnitTest.cc
www/: index.html
